gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/attributediagnostic_pure.d
version https://git-lfs.github.com/spec/v1
oid sha256:f4e59c99a05d35dd4513a0f124d79efc99efa0f057d2c35c0a0ddf80d44d8f2f
size 561
